changed animal reproduction code